--- a/src/app/components/attend-navbar/attend-navbar.component.html
+++ b/src/app/components/attend-navbar/attend-navbar.component.html
@@ -7,7 +7,7 @@
                 <span class="tag is-dark">
                     <i class="far fa-calendar-alt"></i>
                 </span>
-                <span class="tag is-success">Friday, 14th Feb</span>
+                <span class="tag is-success">{{date | date}}</span>
               </div>
             </div>
             <div class="control">
@@ -15,12 +15,12 @@
                   <span class="tag is-dark">
                       <i class="fas fa-clock"></i>
                   </span>
-                  <span class="tag is-info">4:30 PM</span>
+                  <span class="tag is-info">{{time}}</span>
                 </div>
               </div>
       </div>
       <h4 class="title is-4">
-          "Google Developer Group"
+          {{title}}
       </h4>
       </div>
   
