--- a/src/app/components/create-event/create-event.component.html
+++ b/src/app/components/create-event/create-event.component.html
@@ -2,29 +2,36 @@
     <div class="fifteen wide mobile eight wide computer column">
         <h3 class="ui top attached header center aligned inverted">Add Event Details</h3>
         <div class="ui raised attached segment">
-          <img class="ui rounded centered medium image" src="assets/events.gif">
+          <img class="ui rounded centered small image" src="assets/events.gif">
           <div class="ui divider"></div>
               <div class="ui fluid form">
                   <form [formGroup]="addEvent" (ngSubmit)="onSubmit(addEvent.value)">
                     <div class="field">
-                      <input placeholder="Title"  formControlName="event" type="text">
+                      <label>Event Title</label>
+                      <input  formControlName="event" type="text">
                       <div class="ui pointing red basic label"  *ngIf="event.errors?.required && !event.pristine">
                             Title Is Required
                      </div>
                     </div>
                     <div class="field">
-                      <textarea placeholder="Description" formControlName="info"></textarea>
+                      <label>Event Description</label>
+                      <textarea formControlName="info"></textarea>
                       <div class="ui pointing red basic label"  *ngIf="info.errors?.required && !info.pristine">
-                            Dsecription Is Required
+                            Description Is Required
                      </div>
                     </div>
                     <div class="field">
-                      <input placeholder="Start Date" formControlName="date" type="date">
-                      <div class="ui pointing red basic label"  *ngIf="date.errors?.required && !date.pristine">
-                       Date Is Required
-                    </div>
-                    </div>
+                      <label>Competition Date</label>
+                      <input matInput [matDatepicker]="datepicker"
+                             formControlName="date">
+                      <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
+                      <mat-datepicker #datepicker></mat-datepicker>
+                    <div class="ui pointing red basic label"  *ngIf="date.errors?.required && !date.pristine">
+                     Date Is Required
+                  </div>
+                  </div>
                     <div class="field">
+                      <label>Event Time</label>
                       <input [ngxTimepicker]="timepicker" formControlName="time">
                       <ngx-material-timepicker #timepicker></ngx-material-timepicker>
                         <div class="ui pointing red basic label"  *ngIf="time.errors?.required && !time.pristine">
@@ -32,24 +39,47 @@
                       </div>
                       </div>
                     <div class="field">
-                    <input type="radio" formControlName="status">Active
-                    <input type="radio" formControlName="status">Inactive
-                    <input type="radio" formControlName="status">Petition
+                      <mat-radio-group aria-label="Select an option" formControlName="status">
+                        <mat-radio-button value="active" name="event-status">
+                            <a class="ui red horizontal label">Active</a>
+                        </mat-radio-button>
+                        <mat-radio-button value="inactive" name="event-status">
+                            <a class="ui black horizontal label">Inactive</a>
+                        </mat-radio-button>
+                        <mat-radio-button value="petition" name="event-status">
+                            <a class="ui yellow horizontal label">Petition</a>
+                        </mat-radio-button>
+                      </mat-radio-group>
                     <div class="ui pointing red basic label"  *ngIf="status.errors?.required && !status.pristine">
                             Select The Event Status
                      </div>
                     </div>
                     <div class="field">
-                        <input placeholder="End Time" formControlName="venue" type="text">
+                      <label>Event Venue</label>
+                        <input formControlName="venue" type="text">
                         <div class="ui pointing red basic label"  *ngIf="venue.errors?.required && !venue.pristine">
                                Venue Is Required
                          </div>
                         </div>
+                        <div class="field">
+                          <label>Competition Cover</label>
+                          <input placeholder="Cover" type="file" (change)="uploadFile($event)">
+                        </div>
                     <div class="field">
-                    <!-- <input placeholder="Cover" formControlName="cover" type="file" (change)="uploadFile($event)"> -->
-                    <!-- <div class="ui pointing red basic label"  *ngIf="addEvent.controls['confirmPassword'].hasError('NoPassswordMatch') && !confirmPassword.pristine">
-                     Password and Confirm Password Should Match
-                    </div> -->
+                    <label>Add Tags</label>
+                    <mat-chip-list #chipList aria-label="Add Tags">
+                        <input class="tagInput"
+                               [matChipInputFor]="chipList"
+                               [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                               [matChipInputAddOnBlur]="addOnBlur"
+                               (matChipInputTokenEnd)="add($event)"
+                               formControlName="tags">
+                               <mat-chip *ngFor="let tag of tagsArr" [selectable]="selectable"
+                               [removable]="removable" (removed)="remove(tag)">
+                        {{tag.name}}
+                        <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                      </mat-chip>
+                      </mat-chip-list>
                         </div>
                         <div class="field">
                           <div class="two ui buttons">
