--- a/src/app/components/tags/tags.component.sass
+++ b/src/app/components/tags/tags.component.sass
@@ -21,6 +21,9 @@
     font-size: 5rem
     font-family: 'Permanent Marker', cursive
 
+.ui.red.right.label
+    top:5%
+    right: 3%
 
 @media (max-width: 512px)
     .sixteen.wide.column
